# gtirb-semantics

./: .gitignore  CHANGES.md  LICENSE  README.md  dune-project  gtirb_semantics.opam  gtirb_semantics.opam.template
.bsp/: sbt.json
.metals/: metals.mv.db
extras/example-bin/: a.out  exampl2.gtirb  exampl2.json  example  example.c  example.gtirb  example2.ast.json  hw
extras/retrieve/: README.md  build.sbt  out  temp  work-you-bastard
extras/retrieve/src/main/scala/: Main.scala
extras/spelunking/: AuxData_pb2.py  ByteInterval_pb2.py  CFG_pb2.py  CodeBlock_pb2.py  DataBlock_pb2.py  IR_pb2.py  Module_pb2.py  Offset_pb2.py  ProxyBlock_pb2.py  Section_pb2.py  Symbol_pb2.py  SymbolicExpression_pb2.py  spelunk.py
lib/: dune
llvm-disas/: dune  llvm_disas.ml  llvm_disas.mli
scripts/: asm-gts.sh  build-all.sh  debug-gts.py  fulltest.sh  pipeline.sh  proto-json.py  test2
scripts/py/: showasts.py
test/: dune
