
(library
 (name llvm_disas)
 
 (libraries ctypes ctypes.foreign)
 (library_flags :standard -cclib (:include llvmconf.sexp))
)

(rule 
 (targets llvmconf.sexp)
 ; use opam if present otherwise fall back to $LLVM_CONFIG
 (action (bash "if command -v opam; then llvm_config=$(opam var conf-llvm:config); fi ; ${llvm_config:-$LLVM_CONFIG} --libs > llvmconf.sexp"))
)

